<resources>
  <string name="app_name">The Volunteer Network</string>
  <string name="login_failure_message">Unable to sign in with provided credentials.</string>
  <string name="display_name_format">Signed in as %s</string>
  <string name="sign_out">Sign out</string>
  <string name="login_activity_label">TVN Sign In</string>
  <string name="profile_drawer_menu_label">Profile</string>
  <string name="organization_drawer_menu_label">Organization</string>
  <string name="schedule_drawer_menu_label">Schedule</string>
  <string name="search_organizations_drawer_menu_label">Search Organizations</string>
  <string name="my_opportunities_drawer_menu_label">My opportunities</string>
  <string name="display_name_label">Display Name</string>
  <string name="user_skills_label">User Skills</string>
  <string name="user_profile_image">User Profile Image</string>
  <string name="user_organizations_list">Organizations</string>
  <string name="volunteer_skills_label">Volunteer Skills</string>
  <string name="organizations_label">Organizations</string>
  <string name="location_label">Location</string>
  <string name="email_label">Email</string>
  <string name="phone_number_label">Phone Number</string>
  <string name="organization_name_label">Organization Name</string>
  <string name="about_label">About</string>
  <string name="mission_label">Mission</string>
  <string name="permissions_dialog_title">Permissions needed</string>
  <string name="access_fine_location_explanation">This app uses location information to show nearby organizations.</string>
  <string name="access_coarse_location_explanation">This app uses location information to show nearby organizations.</string>
  <string name="organization_details_title">Organization Details</string>
  <string name="all_organizations_name">All Organizations</string>
  <string name="search_organizations_label">Search organizations</string>
  <string name="search_opportunities_label">Search opportunities</string>
  <string name="opportunity_name_label">Name of opportunity</string>
  <string name="description_label">Description of opportunity</string>
  <string name="opportunity_details_title">Opportunity details</string>
</resources>