<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/user_name"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/user_picture"
    android:text="@string/display_name_label"/>

  <ImageView
    android:id="@+id/user_picture"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    app:layout_constraintTop_toBottomOf="parent@id/user_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/user_skills"
    android:contentDescription="@string/user_profile_image"
    android:contextClickable="true"
    android:src="@drawable/ic_baseline_add_a_photo_24"
    />

  <TextView
    android:id="@+id/user_skills"
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/user_picture"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/user_skills_label"/>

  <ListView
    android:id="@+id/user_organizations_label"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/user_skills"
    >

<!--    TODO Find a way to display a list of the current users organizations-->

  </ListView>


</androidx.constraintlayout.widget.ConstraintLayout>