<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="@dimen/half_dynamic_spacing"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".controller.ProfileFragment">


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/organization_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/display_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:inputType="text"
      android:hint="@string/organization_name_label"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/about_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/organization_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/about"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:inputType="text"
      android:hint="@string/about_label"/>
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/mission_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:hintAnimationEnabled="true"
    app:hintEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/about_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">
    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/mission"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/half_dynamic_spacing"
      android:inputType="text"
      android:hint="@string/mission_label"/>
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/opportunities"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="@dimen/half_dynamic_spacing"
    app:layout_constraintTop_toBottomOf="@id/mission_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_baseline_save_24"
    android:enabled="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:useCompatPadding="true"
    tools:ignore="ContentDescription"/>


</androidx.constraintlayout.widget.ConstraintLayout>